# wldash

./: .build.yml  CNAME  Cargo.toml  README.md  config.json  config.yaml  index.html
.github/: FUNDING.yml
src/: app.rs  backlight.rs  battery.rs  buffer.rs  calendar.rs  clock.rs  cmd.rs  color.rs  config.rs  configfmt.rs  data.rs  desktop.rs  doublemempool.rs  draw.rs  event.rs  fonts.rs  launcher.rs  main.rs  module.rs  serdefmt.rs  sound.rs  state.rs  widget.rs
src/keyboard/: ffi.rs  keysyms.rs  mod.rs  repeat.rs  state.rs
src/modules/: backlight.rs  battery.rs  calendar.rs  clock.rs  launcher.rs  mod.rs  module.rs  sound.rs
src/utils/: desktop.rs  inish.rs  mod.rs  xdg.rs
src/widgets/: alsa_sound.rs  alsaaudio.rs  audio.rs  backlight.rs  bar_widget.rs  battery.rs  calendar.rs  clock.rs  date.rs  launcher.rs  layout.rs  line.rs  mod.rs  networkmanager.rs  pulseaudio.rs  sound.rs  widget.rs
src/widgets/audio/: alsa_sound.rs  mod.rs  pulse_sound.rs
