[package]
name = "wldash2"
version = "0.1.0"
edition = "2021"

[profile.release]
#debug = true
lto = "fat"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fontloading = ["fontconfig"]

[dependencies]
wayland-client = { version = "0.30", features = ["calloop", "log"] }
wayland-protocols = { version = "0.30", features = ["client", "unstable", "staging"] }
nix = "0.26"
memmap = "0.7"
fontconfig = { version = "0.6.0", optional = true }
rusttype = "0.9"
calloop = { version = "0.10" }
chrono = "0.4"

walkdir = "2.3"
bitflags = "1.3"

unicode-segmentation = "1.10"
fuzzy-matcher = "0.3"
shlex = "1.1"

xkbcommon = { version = "0.5", features = ["wayland"] }
upower_dbus = "0.3"
zbus = { version = "3.7", default-features = false, features = ["tokio"] }
tokio = { version = "1.24", default-features = false, features = ["rt"] }
tokio-stream = "0.1"

rcalc_lib = "1.0"

libpulse-binding = "2.26"
