[package]
name = "wldash2"
version = "0.1.0"
edition = "2021"

[profile.release]
#debug = true
lto = "fat"
panic = "abort"

[dependencies]
wayland-client = { version = "0.30", features = ["calloop", "log"] }
wayland-protocols = { version = "0.30", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.1", features = ["client"] }
nix = "0.26"
memmap = "0.7"
fontconfig = { version = "0.6.0", optional = true }
rusttype = "0.9"
calloop = { version = "0.10" }
chrono = "0.4"

walkdir = "2.3"
bitflags = "1.3"

unicode-segmentation = "1.10"
fuzzy-matcher = "0.3"
shlex = "1.1"

xkbcommon = { version = "0.5", features = ["wayland"] }

rcalc_lib = "1.0"

#alsa = { version = "0.7", optional = true }
dbus = "0.9"
libpulse-binding = "2.26"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
