[package]
name = "wldash2"
version = "0.1.0"
edition = "2021"

[profile.release]
#debug = true
lto = "fat"
panic = "abort"

[dependencies]
wayland-client = { version = "0.30", features = ["calloop", "log"] }
wayland-protocols = { version = "0.30", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.1", features = ["client"] }
nix = "0.26" # 0.27 is breaking
memmap = "0.7"
fontconfig = { version = "0.8.0", optional = true }
rusttype = "0.9"
# fontdue = "0.7"
calloop = { version = "0.10" } # update breaks
chrono = "0.4"

walkdir = "2.4"

unicode-segmentation = "1.10"
fuzzy-matcher = "0.3"
shlex = "1.3"

xkbcommon = { version = "0.5", features = ["wayland"] } # update breaks

rcalc_lib = "1.0"

#alsa = { version = "0.7", optional = true }
dbus = "0.9"
libpulse-binding = "2.28"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
simd-json = "0.13"

